--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "name": "André Martel"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
