Co-authored-by: doudoune444 <doudoune444@users.noreply.github.com> Co-authored-by: HugoD4846 <dutoit.hugo2001@gmail.com>

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Haha what tests ?\" && exit 1",
-    "start": "rimraf ./dist && node -r ts-node/register src/main"
+    "start": "rimraf ./dist && node -r ts-node/register src/main",
+    "start:dev": "nodemon -e ts --exec \"rimraf ./dist && node -r ts-node/register src/main.ts\""
   },
   "author": {
     "email": "martel_andre@proton.me",
